# fastapi-reference-api

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.sh  tasks.py
app/: main.py
app/handlers/: health_handler.py  readiness_handler.py
app/handlers/v2/: health_handler.py  readiness_handler.py  root_handler.py
k8s/: deployment.yaml
tests/: conftest.py  helpers.py  test_main.py
tests/v1/: test_health.py  test_readiness.py  test_root.py
tests/v2/: test_health.py  test_readiness.py  test_root.py
