[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "app"
version = "0.1.0"
description = "A reference application for a FastAPI instance."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "databases",
    "alembic",
    "httpx",
    "sqlmodel"
]

[project.optional-dependencies]
dev = [
    "uv",
    "ruff",
    "pytest",
    "pytest-cov",
    "pytest-bdd",
    "testcontainers"
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
